<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_ground"
    android:id="@+id/portraitTemp">

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/score"
        android:textColor="@color/black"
        android:textSize="40dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_above="@id/LO"
        android:layout_marginBottom="-120dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_changing"
        android:text="Reset"
        android:textSize="20dp"
        android:textColor="@drawable/text_changing"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/resultText"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:id="@+id/LO"
        android:orientation="horizontal">

        <Button
            android:id="@+id/climbButton"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginRight="40dp"
            android:textStyle="bold"
            android:textSize="45dp"
            android:background="@drawable/button_changing"
            android:textColor="@drawable/text_changing"
            android:text="@string/climb"
            />

        <Button
            android:id="@+id/fallButton"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:gravity="center"
            android:background="@drawable/button_changing"
            android:text="@string/fall"
            android:textSize="45dp"
            android:textColor="@drawable/text_changing"
            android:textStyle="bold" />
    </LinearLayout>


    <TextView
        android:id="@+id/holdState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/resultText"
        android:layout_centerVertical="true"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="119dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/currentHold"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Zone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/holdState"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/zone"
        android:textColor="@color/darkGrey"
        android:textSize="50dp"
        android:textStyle="bold
"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RadioButton
            android:id="@+id/vn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="Vietnamese"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:scaleX="1.4"
            android:scaleY="1.4"
            android:textSize="15dp"
            android:textStyle="bold"
            />

        <RadioButton
            android:id="@+id/eng"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:checked="true"
            android:text="English"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:scaleX="1.4"
            android:scaleY="1.4"
            android:textSize="15dp"
            android:textStyle="bold"
            />




    </RadioGroup>


</RelativeLayout>

